新增mixmaster模块